Set input file and output connection

--- a/1010_input_file_example.conf
+++ b/1010_input_file_example.conf
@@ -2,7 +2,7 @@ input {
   file {
     # IMPORTANT! set this correctly to the charset
     # that your server writes these log files in
-    path => "/path/to/your/modsec/audit/logs/*.log"
+    path => "/var/log/httpd/modsec_audit.log"
     type => "mod_security"
 
     #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
