--- a/3000_output_stdout_example.conf
+++ b/3000_output_stdout_example.conf
@@ -4,5 +4,5 @@ output {
   # real prod environment and get rid of the 
   # "-v" flag when starting logstash
   stdout { codec => rubydebug }
-  
+  elasticsearch { hosts => ["localhost:9200"] }
 }
