reverting master to original

--- a/2060_filter_section_f_parse_request_line.conf
+++ b/2060_filter_section_f_parse_request_line.conf
@@ -9,7 +9,7 @@ filter {
 
       grok {
         match => {
-          "rawSectionF" => "(?m)^(?<serverProtocol>\S*)\s(?<responseStatus>[^\n]*)(\n(?<raw_responseHeaders>.+)?)?$"
+          "rawSectionF" => "(?m)^(?<serverProtocol>.+?)\s(?<responseStatus>[^\n]+)(\n(?<raw_responseHeaders>.+)?)?$"
         }
       }
     }
